# pi-searcher

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Readme.md  index-3a6429b8d32e3bd9.js  index-3a6429b8d32e3bd9_bg.wasm  index-9e9685926cd62c7a.js  index-9e9685926cd62c7a_bg.wasm  index-f4d9ad97e59c8e1f.js  index-f4d9ad97e59c8e1f_bg.wasm  index.html  time-travel.nb  time-travel.sh
.github/workflows/: publish.yml
projects/pi-search/: Cargo.toml  Readme.md
projects/pi-search-data/: computed1.csv  computed1_max.csv  computed2.csv  computed2_max.csv  computed3.csv  computed3_max.csv  computed4.csv  computed4_max.csv  computed5.csv  computed5_max.csv  computed6_max.csv  computed7_max.csv  computed8_max.csv  computed_special.csv  readme.md
projects/pi-search-demo/: Cargo.toml  Trunk.toml  index.html
projects/pi-search-demo/src/: main.rs
projects/pi-search-demo/src/components/: mod.rs
projects/pi-search-demo/src/hook/: mod.rs
projects/pi-search/examples/base10/: main.rs
projects/pi-search/examples/computed/: main.rs
projects/pi-search/examples/special/: main.rs
projects/pi-search/src/: lib.rs
projects/pi-search/src/base10/: mod.rs  test.rs
projects/pi-search/src/base10/mapping/: mod.rs
projects/pi-search/src/base10/traits/: mod.rs
projects/pi-search/src/base256/: mod.rs
projects/pi-search/src/base256/traits/: mod.rs
projects/pi-search/src/precomputed/: mod.rs
projects/pi-search/src/utils/: mod.rs
projects/pi-search/tests/: main.rs
