[package]
name = "pi-search"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "KaTeX Render for wasm bind"
repository = "https://github.com/oovm/katex-wasm"
license = "MPL-2.0"
readme = "Readme.md"
edition = "2021"

[dependencies]

[dev-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
