[package]
name = "pi-search"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "KaTeX Render for wasm bind"
repository = "https://github.com/oovm/katex-wasm"
license = "MPL-2.0"
readme = "Readme.md"
edition = "2021"

[dependencies]
rayon = "1.5.1"
itertools = "0.10.3"
serde = "1.0.136"
serde_derive = "1.0.136"
bincode = "2.0.0-rc.1"


[dev-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
base10 = "cargo test --release --test main dump_base10 -- --ignored"
