[package]
name = "pi-search"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Search digit in pi"
repository = "https://github.com/oovm/pi-searcher"
documentation = "https://docs.rs/pi-search"
license = "MPL-2.0"
readme = "Readme.md"
edition = "2021"
include = ["src/**/*"]

[dependencies]
rayon = "1.5.1"
itertools = "0.10.3"
serde = "1.0.136"
serde_derive = "1.0.136"
bincode = "2.0.0-rc.1"


[dev-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
base10 = "cargo test --release --test main dump_base10 -- --ignored"
map10 = "cargo test --release --test main dump_computed10 -- --ignored"
